--- a/experiments/1_Reading_Neutrality/experiment/css/local-style.css
+++ b/experiments/1_Reading_Neutrality/experiment/css/local-style.css
@@ -1,7 +1,49 @@
+/* The slider itself */
 .slider {
-  /* default is width 400 and margin 10 */
-	width: 400;
-	margin: 10px;
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  border-radius: 5px;
+  width: 50%; /* Full-width */
+  height: 15px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
+  visibility: hidden;
+}
+
+.visibleslider::-webkit-slider-thumb {
+    visibility: visible;
+}
+
+.invisible_err {
+  visibility: hidden;
+}
+
+.visibleerr {
+  visibility: visible;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
+  opacity: 1;
 }
 
 input.button {
@@ -54,4 +96,13 @@ table.likertscale  {
 
 .likertlabel {
 	width: 15px;
+}
+
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+.questionnaire {
+  font-size: 1.1em;
+  font-weight: bold;
 }
