--- a/experiments/2_Maze_Neutrality/experiment/css/local-style.css
+++ b/experiments/2_Maze_Neutrality/experiment/css/local-style.css
@@ -106,3 +106,23 @@ table.likertscale  {
   font-size: 1.1em;
   font-weight: bold;
 }
+
+table.sidebyside{
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+  margin-top:145px;
+}
+
+td.structureleft {
+  font-size: 80%;
+  width: 200px;
+  text-align: center;
+}
+
+td.structureright {
+  font-size: 80%;
+  width: 200px;
+  padding-left: 50px;
+  text-align: center;
+}
